# dinqr

./: .gitignore  ACCION_URGENTE_REINICIAR_BACKEND.md  ALTERACAO_TEXTO_BOTAO_GERAR_PASSE.md  ANALISIS_BOTONES_CV.md  ANALISIS_PROBLEMA_CV.md  ARCHIVOS_CON_AUTOR.md  BOTONES_CV_DASHBOARD.md  CAMBIOS_APLICADOS.md  CARDDESIGNER_ADVANCED_FEATURES.md  CARDDESIGNER_IMPROVEMENTS.md  CARDDESIGNER_INTEGRATION.md  CARDDESIGNER_THEME_EDITING_FIX.md  CARTON_VISITA_GUIA_RAPIDA.md  CODIGO_CORRECTO_BOTONES.md  CORRECCIONES_APLICADAS.md  CORRECCION_CV_CODES.md  CORRECCION_FETCH_CV.md  CORRECCION_SINTAXIS_FINAL.md  CORRECCION_TEMA_EXISTENTE.md  DEBUG_BOTONES_CV.md  DEBUG_MODAL_CV.md  DIAGNOSTICO_FUNCIONARIOS_VAZIO.md  Dockerfile  ERRORES_500_BACKEND.md  ERRORES_CORREGIDOS_MODAL_CV.md  ERROR_404_ENDPOINT.md  ESTADO_FINAL_MIGRACION.md  FIXES_APPLIED.md  FIX_CARDDESIGNER_ISSUES.md  HEADER_ACTUALIZADO.md  IMPLEMENTACION_CARTON_VISITA.md  IMPLEMENTACION_COMPLETA_EDICION_TEMAS.md  INFOGRAFIA_CARTON_VISITA.md  INSTALACION_FINAL_CV.md  INSTALAR_CARTON_VISITA.ps1  INSTRUCCIONES_CORRECCION_QR_ROUTES.md  INSTRUCCIONES_MANUALES_CV.md  INSTRUCCIONES_MIGRACION_PRESTADORES.md  INTEGRACAO_COMPLETA.md  INTEGRACAO_RRHH_COMPLETA.md  (+56 more)
backend/: .dockerignore  .env  CORRECCIONES_APLICADAS.md  Dockerfile  FOTO_FUNCIONARIOS_SUMMARY.md  GUIA_FUNCIONARIOS_FOTO.md  GUIA_POSTMAN_IAMC.md  GUIA_TESTE_POSTMAN.md  IAMC_DOCUMENTATION.md  IAMC_FINAL_STATUS_REPORT.md  IAMC_Foto_Endpoints.json  IAMC_Postman_Collection.json  IAMC_Postman_Collection_Melhorada.json  IAMC_Postman_Environment.json  MIGRATION_SUMMARY.md  PASSES_CONFIG_README.md  PASSES_IMPLEMENTATION_STATUS.md  README_MIGRATION.md  RESUMO_AJUSTES_IAMC.md  SERVICIO_WINDOWS.md  app.py  assign_cargo_departamento.py  check_ids.py  check_qr_status.py  check_qr_table.py  check_qr_table_structure.py  check_settings.py  check_tables.py  cleanup_test_data.py  complete_migration.py  config.py  config_backup.py  criar_tabelas_iamc.py  dashboard_app.py  debug_funcionarios.py  demo_passes_config.py  diagnose_app.py  diagnostico_cv.py  extensions.py  fix_indentation.py  (+80 more)
backend/apiqr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/controllers/: __init__.py  dashboard_controller.py  iamc_funcionarios_controller.py  iamc_funcionarios_controller_new.py  iamc_funcionarios_fallback.py  iamc_presencas_controller.py  iamc_presencas_controller_new.py
backend/data/: import_test.json
backend/dinqr_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/logs/: app.log.1  app.log.4  app.log.5  app.log.6  app.log.7  app.log.8  app.log.9  server_manager.log.1  server_manager.log.2  server_manager.log.3  server_manager.log.4  server_manager.log.5
(+209 files in other folders)
