[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dinqr-backend"
version = "1.0.0"
description = "DINQR Backend - Sistema de gestión empresarial con Waitress para Windows Server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DINQR Team", email = "admin@dinqr.com"},
    {name = "Maikel Cuao", email = "maikelcm@hotmail.com"},
]
keywords = ["flask", "waitress", "windows", "backend", "api", "dinqr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "Flask>=3.0.0",
    "waitress>=3.0.0",
    "flask-cors>=5.0.0",
    "Flask-JWT-Extended>=4.5.0",
    "Flask-Limiter>=3.12.0",
    "Flask-Login>=0.6.0",
    "Flask-Migrate>=4.0.0",
    "Flask-RESTful>=0.3.10",
    "Flask-SQLAlchemy>=3.1.0",
    "flask-talisman>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.14.0",
    "marshmallow>=3.26.0",
    "qrcode>=8.1",
    "pillow>=11.1.0",
    "requests>=2.32.0",
    "flasgger>=0.9.7",
    "blinker>=1.9.0",
    "click>=8.1.0",
    "itsdangerous>=2.2.0",
    "MarkupSafe>=3.0.0",
    "Werkzeug>=3.1.0",
    "gunicorn>=23.0.0",
    "limits>=4.7.0",
    "PyJWT>=2.10.0",
    "pytz>=2024.2",
    "six>=1.17.0",
    "setuptools>=72.2.0",
    "typing_extensions>=4.12.0",
    "urllib3>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "flake8>=3.8.0",
]
windows = [
    "pywin32>=308; sys_platform == 'win32'",
]

[project.scripts]
dinqr-server = "waitress_server:main"
dinqr-service = "windows_service:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "*.tests*", "*.tests.*", "tests.*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json", "*.sql", "*.html", "*.css", "*.js"]
"static" = ["*"]
"templates" = ["*"]
